# Lux-Design-S2

./: .gitignore  .gitmodules  CONTRIBUTING.md  ChangeLog.md  README.md  environment.yml  replay.json  replay2.json  run.py  setup.py  specs.md
.github/workflows/: python-publish.yml
dev/: README.md  environment.yml  sample_obs.json
docs/: advanced_specs.md  cli.md
examples/: sb3.py  sb3old.py
examples/tutorials/: 1_intro_to_rl.ipynb  2_rl_for_lux.ipynb  ppo_policy.webm
kits/: README.md  available_packages.txt  replay.html  replay.json  sample_env_cfg.json  sample_obs.json
kits/cpp/: .gitignore  CMakeLists.txt  Dockerfile  README.md  agent.cpp  compile.bat  compile.sh  create_submission.bat  create_submission.sh  main.py  sources.cmake
kits/cpp/src/: agent.cpp  agent.hpp  main.cpp
kits/cpp/src/lux/: action.cpp  action.hpp  board.cpp  board.hpp  common.cpp  common.hpp  config.cpp  config.hpp  exception.hpp  factory.cpp  factory.hpp  json.hpp  log.cpp  log.hpp  observation.cpp  observation.hpp  team.hpp  unit.cpp  unit.hpp
kits/java/: README.MD  compile.sh  main.py  pom.xml
kits/js/: .gitignore  README.md  agent.js  main.js  main.py
kits/python/: .gitignore  README.md  agent.py  log  log.json  lux-ai-challenge-season-2-tutorial-python.ipynb  main.py  obs.json  simple.py  starter_python.ipynb
kits/rl/: README.md
kits/rl-sb3/: .gitignore  README.md  agent.py  nn.py  train.py
kits/rl-sb3-jax-env/: agent.py  main.py
kits/rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  create_submission.bat  create_submission.sh  main.py
kits/rust/lux/: Cargo.toml
kits/rust/lux-runtime/: Cargo.toml
kits/rust/lux-runtime/src/: main.rs
kits/rust/lux/src/: action.rs  board.rs  cargo.rs  config.rs  error.rs  event.rs  factory.rs  lib.rs  observation.rs  robot.rs  state.rs  team.rs  utils.rs
lux-eye-2022/: README.md  index.html  vite.config.ts
lux-eye-s2/: 404.html  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
lux-eye-s2/src/: App.tsx  main.tsx  store.ts
luxai2022/: __init__.py  actions.py  config.py  env.py  factory.py  globals.py  state.py  team.py  unit.py
luxai2022/map/: __init__.py  bfs_deltas_gen.py  board.py  position.py  weather.py
luxai2022/map_generator/: generator.py  symnoise.py  timing.py  visualize.py  visualize_samples.py
luxai2022/pyvisual/: visualizer.py
luxai2022/replay/: replay.py
luxai2022/spaces/: act_space.py  obs_space.py
luxai2022/state/: state.py
luxai2022/tools/: replay.py
luxai2022/utils/: __init__.py  normalize_obs.py  utils.py
luxai_runner/: README.md  bot.py  cli.py  episode.py  ext_to_command.py  logger.py  process.py  runner.py  utils.py
luxai_runner/tournament/: __init__.py  config.py  matchmaking.py  rankingsystem.py  tournament.py
luxai_s2/: .gitignore  setup.py
luxai_s2/luxai_runner/: README.md  bot.py  cli.py  episode.py  logger.py  (+2 more)
tests/: bench.py  play.py  transfer.py
visualizer/: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+263 files in other folders)
